chore(docker-compose): update service configurations

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,51 +1,1 @@
-version: "3.9"
-
-services:
-  postgres:
-    image: postgres:15
-    container_name: backstage_postgres
-    restart: always
-    environment:
-      POSTGRES_USER: pela
-      POSTGRES_PASSWORD: pela
-      POSTGRES_DB: backstage
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    networks:
-      - backstage-net
-
-  backstage:
-    image: ghcr.io/backstage/backstage:latest
-    container_name: backstage_app
-    restart: always
-    depends_on:
-      - postgres
-    environment:
-      AUTH_GITHUB_CLIENT_SECRET: ${AUTH_GITHUB_CLIENT_SECRET}
-      AUTH_GITHUB_CLIENT_ID: ${AUTH_GITHUB_CLIENT_ID}
-      GITHUB_TOKEN: ${GITHUB_TOKEN}
-
-      # Backstage database configuration
-      POSTGRES_HOST: postgres
-      POSTGRES_PORT: 5432
-      POSTGRES_USER: pela
-      POSTGRES_PASSWORD: pela
-      POSTGRES_DB: backstage
-
-      # Backstage options
-      MAIN_LOCATIONS_FILE: "https://github.com/Pela647/backstage-templates/blob/main/locations.yaml"
-      NODE_OPTIONS: --no-node-snapshot
-
-    ports:
-      - "7007:7007"
-    networks:
-      - backstage-net
-
-volumes:
-  postgres_data:
-
-networks:
-  backstage-net:
-    driver: bridge
+- Get docker-compose sample from tech/platform-engineering
